# PresentationTemplate

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.en.md  README.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
.agents/skills/commit-and-report/: SKILL.md
.agents/skills/evidence-check/: SKILL.md
.agents/skills/github-issues/: SKILL.md
.agents/skills/reload-and-reset/: SKILL.md
.agents/skills/reload-instructions/: SKILL.md
.claude/: settings.json
config/themes/: corporate.yaml  technical.yaml
examples/: architecture_example.py  example_conversation.md  full_presentation_example.py
instructions/: PROJECT.en.md  PROJECT.en.md.backup.20260628_224846  PROJECT.md  PROJECT.md.backup.20260628_224846
instructions/modules/: diagram_generator.en.md  diagram_generator.md  presentation_designer.en.md  presentation_designer.md  presentation_workflow.en.md  presentation_workflow.md
scripts/: check_dependencies.py  setup.sh
src/: __init__.py
src/ai/: __init__.py  content_generator.py  conversation.py  requirements_gatherer.py
src/charts/: __init__.py  comparison.py  statistical.py  timeline.py
src/core/: __init__.py  presentation.py  slide_builder.py  template_manager.py  version_manager.py
src/diagrams/: __init__.py  architecture.py  flowchart.py  network.py
src/i18n/: __init__.py  font_selector.py  language_detector.py  layout_adjuster.py
src/utils/: __init__.py  color_schemes.py  layout_engine.py
